Enable modernizer for main sources and fix its violations
Test classes stay excluded: they still use java.io.File throughout.
ScanningRequest and FileFetcher join paths with Path.of(String, String...)
rather than Path.resolve, because their child path may start with a slash
and resolve would treat it as absolute. FileFetcher still throws
FileNotFoundException, as the ResourceFetcher contract promises.

Fixes #591